--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel=stylesheet href="./styles.css">
+  <title>prosemirror-invisibles</title>
   <style>
     .ProseMirror {
       padding: 4px 8px 4px 14px;
