Experiment with nested elements

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <style>
     .ProseMirror {
       padding: 4px 8px 4px 14px;
+      font-size: 1.1em;
       line-height: 1.5;
       outline: none;
     }
